# collections-api

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: workflow.yml
alembic/: env.py
alembic/versions/: 57c3fa60fdd8_add_game_table.py
ansible/: ansible.cfg  inventory.yml
ansible/group_vars/local/: vars.yml  vault.yml
ansible/playbooks/: deploy.yml  setup.yml
ansible/templates/: Caddyfile.j2  collections-api.service.j2  env.j2
ansible/vars/: main.yml  secrets.yml
docker/: entrypoint.sh
src/: config.py  main.py  models.py
src/database/: core.py
src/games/: models.py  views.py
terraform/: terraform.tf
tests/: conftest.py  test_api.py
