[project]
name = "collections"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "greenlet>=3.3.0",
]

[dependency-groups]
dev = [
    "ansible>=13.2.0",
    "mypy>=1.19.1",
    "pip-audit>=2.10.0",
    "ruff>=0.14.10",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

exclude = [
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
fixable = ["ALL", ]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest]
pythonpath = [".", "src"]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true
mypy_path = ["src"]
plugins = ["pydantic.mypy"]
